<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">akmi后勤综合管理平台</string>
    <string name="title">akmi后勤综合管理平台</string>
    <string name="staff_number">请输入教工号</string>
    <string name="password">请输入密码</string>
    <string name="auto_login">自动登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login">登录</string>
    <string name="please_wait">请稍后</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="repair">报修</string>
    <string name="building">正在建设</string>
    <string name="title_activity_repair">RepairActivity</string>
    <string name="want_repair">我要报修</string>
    <string name="repari_record">报修记录</string>
    <string name="que_name">标题</string>
    <string name="que_content">内容</string>
    <string name="login_failed">登录失败</string>
    
    <!-- pulltorefresh -->
    <string name="pull_to_refresh_pull_label">下拉刷新...</string>
    <string name="pull_to_refresh_release_label">释放刷新...</string>
    <string name="pull_to_refresh_refreshing_label">正在加载...</string>
    <string name="pull_to_refresh_tap_label">上拉刷新...</string>
    <string name="more">加载更多</string>
    <string name="no_new_content">暂时没有更多内容了，请看看其他分类吧</string>

    <!-- RepairActivity -->
    <string name="require">(必填)</string>
    <string name="location_info">地理信息</string>
    <string name="zone">区域</string>
    <string name="building_num">楼号</string>
    <string name="question_info">问题信息</string>
    <string name="project_category">项目分类</string>
    <string name="project_subcategory">项目子分类</string>
    <string name="question_des">问题描述</string>
    <string name="upload">上传照片</string>
    <string name="upload_hint">(小于3张)</string>
    <string name="submite">提交</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_repair_detail">RepairDetailActivity</string>
    <!-- RepairDetailActivity -->
    <string name="repair_detail">报修详情</string>
    <string name="repair_info">报修信息</string>
    <string name="repair_location">位置:</string>
    <string name="repair_project">项目:</string>
    <string name="repair_dec">描述:</string>
    <string name="repair_image">图片</string>
    <string name="submiter">提交人:</string>
    <string name="title_activity_que_dec">QueDecActivity</string>

</resources>
