<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:background="@color/bg"
        >
        <include 
        layout="@layout/title_bar"/>
	    <LinearLayout
	       android:layout_width="match_parent"
	       android:layout_height="212dp"
	       android:gravity="center"
	       android:orientation="vertical"
	       >
	        <ImageView
	            android:layout_width="wrap_content"
	      	 	android:layout_height="wrap_content"
	      	 	android:src="@drawable/c1_03"></ImageView>
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="100dp"
	        android:orientation="vertical"
	        android:background="@drawable/rect_circle_gray"
	        android:layout_marginLeft="22dp"
	        android:layout_marginRight="22dp">
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:paddingLeft="20dp"
	            android:orientation="horizontal"
	            android:gravity="center_vertical"
	            >
	            <ImageView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:background="@drawable/staff_number"
	                android:layout_marginRight="10dp"/>
	            <EditText 
	                android:id="@+id/staffId_et"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:background="@null"
	                android:hint="@string/staff_number"
	                android:text="ptyh1"
	                android:textSize="@dimen/nfont_size_54px"
	                android:textColor="@color/gray01"/>
	        </LinearLayout>
	        <ImageView 
	            android:layout_width="match_parent"
	            android:layout_height="1px"
	            android:background="@color/divider"/>
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:paddingLeft="20dp"
	            android:orientation="horizontal"
	            android:gravity="center_vertical"
	            >
	            <ImageView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:background="@drawable/password"
	                android:layout_marginRight="10dp"/>
	            <EditText 
	                android:id="@+id/password_et"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:hint="@string/password"
	                android:text="123456"
	                android:inputType="textPassword"
	                android:textSize="@dimen/nfont_size_54px"
	                android:background="@null"
	                android:textColor="@color/gray01"/>
	        </LinearLayout>
	    </LinearLayout>
	    <RelativeLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="5dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp"
	        >
	        <ImageView 
	            android:id="@+id/savepassword"
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:layout_alignParentLeft="true"
	            android:layout_centerVertical="true"
	            android:background="@drawable/save_password"
	            />
	        <TextView
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/auto_login"
	            android:textColor="@color/auto_login"
	            android:textSize="@dimen/nfont_size_48px"
	            android:layout_toRightOf="@id/savepassword"
	            android:layout_marginLeft="5dp"
	            android:layout_centerVertical="true"/>
	        <TextView 
	            android:layout_height="wrap_content"
	            android:layout_width="wrap_content"
	            android:text="@string/forget_password"
	            android:textColor="@color/forget_password"
	            android:textSize="@dimen/nfont_size_48px"
	            android:layout_alignParentRight="true"
	            android:layout_centerVertical="true"
	            />
	    </RelativeLayout>
	    
	    <Button 
	        android:id="@+id/login_bn"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:layout_marginLeft="22dp"
	        android:layout_marginRight="22dp"
	        android:background="@drawable/rect_circle_orange_bg"
	        android:text="@string/login"
	        android:textColor="@color/white"
	        android:textSize="@dimen/nfont_size_60px"
	        />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        >
        <include layout="@layout/waiting_layout"/>
    </LinearLayout>
    
</RelativeLayout>
