<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical"
	        android:background="@color/bg"
	        android:paddingLeft="13dp"
	        android:paddingRight="13dp"
	        android:paddingBottom="10dp"
	        android:paddingTop="10dp" >
            <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/location_info"
	            android:textColor="@color/blacktop"
	            android:textSize="@dimen/nfont_size_54px"
	            android:layout_marginBottom="5dp"/>
	        <LinearLayout
	            android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" 
		        android:background="@drawable/rect_circle_gray">
		        <RelativeLayout 
		            android:id="@+id/zone_rl"
	                android:layout_width="match_parent"
			        android:layout_height="43dp"
			        android:padding="8dp"
	                >
	                <TextView 
	                    android:id="@+id/zone"
			            android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:gravity="center_vertical"
			            android:text="@string/zone"
			            android:textColor="@color/gray02"
			            android:textSize="@dimen/nfont_size_54px"/>
	                <TextView 
	                    android:id="@+id/zone_tv"
	                    android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:gravity="center_vertical"
			            android:text=""
			            android:textColor="@color/gray01"
			            android:textSize="@dimen/nfont_size_54px"
			            android:layout_toRightOf="@id/zone"
			            android:layout_marginLeft="15dp"
	                    />
	                <ImageView 
	                    android:id="@+id/zone_next"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/next"
	                    android:layout_centerVertical="true"
	                    android:layout_alignParentRight="true"
	                    />
	                <TextView 
	                    android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:gravity="center_vertical"
			            android:text="@string/require"
			            android:textColor="@color/gray00"
			            android:textSize="@dimen/nfont_size_54px"
			            android:layout_toLeftOf="@id/zone_next"
			            android:layout_marginRight="8dp"
	                    />
	            </RelativeLayout>
	            
	            <ImageView 
	                android:layout_width="match_parent"
	                android:layout_height="1px"
	                android:background="@color/divider"/>
	            <RelativeLayout 
	                android:id="@+id/building_rl"
	                android:layout_width="match_parent"
			        android:layout_height="43dp"
			        android:padding="8dp"
	                >
	                <TextView 
	                    android:id="@+id/building"
			            android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:gravity="center_vertical"
			            android:text="@string/building_num"
			            android:textColor="@color/gray02"
			            android:textSize="@dimen/nfont_size_54px"/>
	                <TextView 
	                    android:id="@+id/building_tv"
	                    android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:gravity="center_vertical"
			            android:text=""
			            android:textColor="@color/gray01"
			            android:textSize="@dimen/nfont_size_54px"
			            android:layout_toRightOf="@id/building"
			            android:layout_marginLeft="15dp"
	                    />
	                <ImageView 
	                    android:id="@+id/building_next"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/next"
	                    android:layout_centerVertical="true"
	                    android:layout_alignParentRight="true"
	                    />
	                
	            </RelativeLayout>
	            
	        </LinearLayout>
	        
	        
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/question_info"
	            android:layout_marginTop="11dp"
	            android:textColor="@color/blacktop"
	            android:textSize="@dimen/nfont_size_54px"
	            android:layout_marginBottom="8dp"/>
	        <LinearLayout
	            android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical" 
		        android:background="@drawable/rect_circle_gray">
	            <RelativeLayout 
	                android:id="@+id/project_category_rl"
	                android:layout_width="match_parent"
			        android:layout_height="43dp"
			        android:padding="8dp"
	                >
	                <TextView 
	                    android:id="@+id/project_category"
			            android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:gravity="center_vertical"
			            android:text="@string/project_category"
			            android:textColor="@color/gray02"
			            android:textSize="@dimen/nfont_size_54px"/>
	                <TextView 
	                    android:id="@+id/project_category_tv"
	                    android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:gravity="center_vertical"
			            android:text=""
			            android:textColor="@color/gray01"
			            android:textSize="@dimen/nfont_size_54px"
			            android:layout_toRightOf="@id/project_category"
			            android:layout_marginLeft="15dp"
	                    />
	                <ImageView 
	                    android:id="@+id/project_category_next"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/next"
	                    android:layout_centerVertical="true"
	                    android:layout_alignParentRight="true"
	                    />
	                <TextView 
	                    android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:gravity="center_vertical"
			            android:text="@string/require"
			            android:textColor="@color/gray00"
			            android:textSize="@dimen/nfont_size_54px"
			            android:layout_toLeftOf="@id/project_category_next"
			            android:layout_marginRight="8dp"/>
	            </RelativeLayout>
	            <ImageView 
	                android:layout_width="match_parent"
	                android:layout_height="1px"
	                android:background="@color/divider"/>
	            <RelativeLayout 
	                android:id="@+id/project_subcategory_rl"
	                android:layout_width="match_parent"
			        android:layout_height="43dp"
			        android:padding="8dp"
	                >
	                <TextView 
	                    android:id="@+id/project_subcategory"
			            android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:gravity="center_vertical"
			            android:text="@string/project_subcategory"
			            android:textColor="@color/gray02"
			            android:textSize="@dimen/nfont_size_54px"/>
	                <TextView 
	                    android:id="@+id/project_subcategory_tv"
	                    android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:gravity="center_vertical"
			            android:text=""
			            android:textColor="@color/gray01"
			            android:textSize="@dimen/nfont_size_54px"
			            android:layout_toRightOf="@id/project_subcategory"
			            android:layout_marginLeft="15dp"
	                    />
	                <ImageView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/next"
	                    android:layout_centerVertical="true"
	                    android:layout_alignParentRight="true"
	                    />
	               
	            </RelativeLayout>
	            
	            
	             <ImageView 
	                android:layout_width="match_parent"
	                android:layout_height="1px"
	                android:background="@color/divider"/>
	            
	            <RelativeLayout 
	                android:id="@+id/question_des_rl"
	                android:layout_width="match_parent"
			        android:layout_height="43dp"
			        android:padding="8dp"
	                >
	                <TextView 
	                    android:id="@+id/question_des"
			            android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:gravity="center_vertical"
			            android:text="@string/question_des"
			            android:textColor="@color/gray02"
			            android:textSize="@dimen/nfont_size_54px"/>
	                <TextView 
	                    android:id="@+id/question_des_tv"
	                    android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:gravity="center_vertical"
			            android:text=""
			            android:textColor="@color/gray01"
			            android:textSize="@dimen/nfont_size_54px"
			            android:layout_toRightOf="@id/question_des"
			            android:singleLine="true"
			            android:layout_marginRight="15dp"
			            android:layout_marginLeft="15dp"
	                    />
	                <ImageView 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:background="@drawable/next"
	                    android:layout_centerVertical="true"
	                    android:layout_alignParentRight="true"
	                    />
	               
	            </RelativeLayout>
	        </LinearLayout>
	        <LinearLayout 
	            android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:gravity="center_vertical"
		        android:layout_marginTop="11dp"
		        android:layout_marginBottom="8dp">
	            <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/upload"
		            android:textColor="@color/blacktop"
		            android:textSize="@dimen/nfont_size_54px"
		            />
	            <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/upload_hint"
		            android:layout_marginLeft="5dp"
		            android:textColor="@color/orange"
		            android:textSize="@dimen/nfont_size_42px"/>
	        </LinearLayout>
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginBottom="10dp"
		        android:gravity="center">
	            <ImageView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginRight="8dp"
		            android:background="@drawable/upload"/>
	            <ImageView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginRight="8dp"
		            android:background="@drawable/upload"/>
	            <ImageView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginRight="8dp"
		            android:background="@drawable/upload"/>
	            <ImageView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginRight="8dp"
		            android:background="@drawable/upload"/>
	        </LinearLayout>
	        <Button 
	            android:id="@+id/submit"
		        android:layout_width="match_parent"
		        android:layout_height="43dp"
		        android:background="@drawable/rect_circle_orange_bg"
		        android:text="@string/submite"
		        android:textColor="@color/white"
		        android:textSize="@dimen/nfont_size_60px"
		        />
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <include layout="@layout/waiting_layout"/>
        </LinearLayout>
        
    </RelativeLayout>

