<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
     >
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:background="@color/bg"/>
    <ImageView 
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingLeft="13dp"
	    android:paddingRight="13dp"
	    android:paddingTop="16dp"
	    android:paddingBottom="16dp"
	    android:background="@color/white"
	    >
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/repair_info"
	        android:textColor="@color/blacktop"
	        android:textSize="@dimen/nfont_size_54px"
	        android:layout_marginBottom="16dp"/>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginBottom="8dp">
	         <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/repair_location"
		        android:textColor="@color/gray02"
		        android:textSize="@dimen/nfont_size_54px"
		        android:layout_marginRight="5dp"
		        />
	         <TextView 
	            android:id="@+id/repair_location"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:textColor="@color/gray02"
		        android:textSize="@dimen/nfont_size_54px"
		        />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginBottom="8dp">
	         <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/repair_project"
		        android:textColor="@color/gray02"
		        android:textSize="@dimen/nfont_size_54px"
		        android:layout_marginRight="5dp"
		        />
	         <TextView
	             android:id="@+id/repair_project" 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:textColor="@color/gray02"
		        android:textSize="@dimen/nfont_size_54px"
		        />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginBottom="8dp">
	         <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/repair_dec"
		        android:textColor="@color/gray02"
		        android:textSize="@dimen/nfont_size_54px"
		        android:layout_marginRight="5dp"
		        />
	         <TextView 
	            android:id="@+id/repair_dec"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:textColor="@color/gray02"
		        android:textSize="@dimen/nfont_size_54px"
		        />
	    </LinearLayout>
	    <LinearLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginBottom="8dp">
	         <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/repair_image"
		        android:textColor="@color/gray02"
		        android:textSize="@dimen/nfont_size_54px"
		        android:layout_marginRight="5dp"
		        />
	         <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text=""
		        android:textColor="@color/gray02"
		        android:textSize="@dimen/nfont_size_54px"
		        />
	    </LinearLayout>
	    <LinearLayout 
            android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_marginBottom="10dp"
	        >
            <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="8dp"
	            android:background="@drawable/upload"
	            android:visibility="gone"/>
            <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="8dp"
	            android:background="@drawable/upload"
	            android:visibility="gone"/>
            <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="8dp"
	            android:background="@drawable/upload"
	            android:visibility="gone"/>
            <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="8dp"
	            android:background="@drawable/upload"
	            android:visibility="gone"/>
        </LinearLayout>
	</LinearLayout>
</LinearLayout>
